WIP: pendiente redes sociales y pagina nosotros

--- a/index.html
+++ b/index.html
@@ -42,68 +42,90 @@
 </nav>
 </header>
 <body>
-  <div class="jumbotron">
-    <h1 style="color:#a54a84; text-align:center;">Dona acá tus 7 lucas</h1>
-    <p style="color:#ce95b6; text-align:center;">Toda las Sonrisas son gratis pero tu dona una!!</p>
-    <p style="text-align:center;"><a class="btn btn-primary btn-lg" href="#" role="button">Más información</a></p>
-  </div>
-  <!--div class="container"-->
-  <div class="row">
-    <div class="col-sm-6 col-md-3">
-      <div class="thumbnail">
-        <img src="images/donacion.jpg" alt="...">
-        <div class="caption">
-          <h3 style="text-align:center">Haga su donación "deposite aquí"</h3>
-          <p>Aportando dinero en forma automática. Tenemos convenio de débito interbancario, donde el socio firma un mandato en el que se compromete a realizar donación mensual que se descuenta a través de su cuenta corriente. </p>
-          <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-3">
-      <div class="thumbnail">
-        <img src="images/cuidado.jpg" alt="...">
-        <div class="caption">
-          <h3 style="text-align:center">Renovación de Unidades de Oncología Infantil</h3>
-          <p>Hospital San Juan de Dios <br/>Hospital de Concepción <br/>Hospital San Borja Arriarán</p>
-          <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-3">
-      <div class="thumbnail">
-        <img src="images/familia.jpg" alt="...">
-        <div class="caption">
-          <h3 style="text-align:center">Manual para Padres de niños Oncológicos</h3>
-          <p>Descargue este manual de información básica sobre la enfermedad, tratamiento, cuidados en el hogar y manejo del impacto de la enfermedad.</p>
-          <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-3">
-      <div class="thumbnail">
-        <img src="images/corona.jpg" alt="...">
-        <div class="caption">
-          <h3 style="text-align:center">Coronas de Caridad Fundación Niño y Cáncer</h3>
-          <p>Entregue condolencias los deudos a través de nuestras tarjetas. Conozca los nuevos diseños.</p>
-          <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--/div-->
-  <div "container" style="background-color:lavenderblush;">
+  <div class="container-fluid" style="background-color:lavenderblush; padding: 40px;">
+    <div class="jumbotron">
       <div class="row">
-        <div class="col-sm-3 col-md-6">
-          <h4>Contacto:</h4>
-
+        <div class="col-lg-4">
+          <img src="images/ariana.png" alt="...">
         </div>
-        <div class="col-sm-9 col-md-6">
-          <h4>ubicación:</4>
-            <div class="embed-responsive embed-responsive-4by3">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2321.958263326811!2d-70.53805695147587!3d-33.383908840486605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1542129520814" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
+        <div class="col-lg-8">
+          <h1 style="color:#a54a84;">Dona acá tus 7 lucas</h1>
+          <p style="color:#ce95b6;">Toda las Sonrisas son gratis pero unas cuestan mas que otras</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Más información</a></p>
         </div>
       </div>
     </div>
-  </body>
-  </html>
+    <!--div class="container"-->
+    <div class="container-fluid" style="background-color:#abe1fb; padding: 40px;">
+      <div class="row">
+        <div class="col-sm-6 col-md-3">
+          <div class="thumbnail">
+            <img src="images/donacion.jpg" alt="...">
+            <div class="caption">
+              <h3 style="text-align:center">Haga su donación "deposite aquí"</h3>
+              <p style="text-align:center">Aportando dinero en forma automática. Tenemos convenio de débito interbancario, donde el socio firma un [...]</p>
+              <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <div class="thumbnail">
+            <img src="images/cuidado.jpg" alt="...">
+            <div class="caption">
+              <h3 style="text-align:center">Renovación de Unidades de Oncología Infantil</h3>
+              <p style="text-align:center">Hospital San Juan de Dios <br/>Hospital de Concepción <br/>Hospital San Borja Arriarán</p>
+              <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <div class="thumbnail">
+            <img src="images/familia.jpg" alt="...">
+            <div class="caption">
+              <h3 style="text-align:center">Manual para Padres de niños Oncológicos</h3>
+              <p style="text-align:center">Descargue este manual de información básica sobre la enfermedad, tratamiento, cuidados en el hogar y [...]</p>
+              <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <div class="thumbnail">
+            <img src="images/corona.jpg" alt="...">
+            <div class="caption">
+              <h3 style="text-align:center">Coronas de Caridad Fundación Niño y Cáncer</h3>
+              <p style="text-align:center">Entregue condolencias los deudos a través de nuestras tarjetas. <br/>Conozca los nuevos diseños.</p>
+              <p style="text-align:center"><a href="#" class="btn btn-primary" role="button">Más información</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--/div-->
+    <!--footer-->
+    <div class="container-fluid" style="background-color:#eaecf8; padding: 40px;">
+      <div class="row">
+        <div class="col-sm-4">
+          <h4>Contacto:</h4>
+          <p>Teléfonos: 22170821 - 22170811<br/>
+            Fax: 22170820<br/>
+            Cta. Cte: Banco BCI N° 85999997<br/>
+            RUT: 72.169.900-5<br/>
+            Email: fundacion@ninoycancer.cl<br/>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h4>Redes Sociales</h4>
+          <p>Lorem ipsum dolor..</p>
+          <p>Ut enim ad..</p>
+        </div>
+        <div class="col-sm-4">
+          <h4>Ubicación:</4>
+            <div class="embed-responsive embed-responsive-4by3">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3331.502611695222!2d-70.53789128968806!3d-33.384049213371085!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1542149345194" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--footer-->
+    </body>
+    </html>
