--- a/nosotros.html
+++ b/nosotros.html
@@ -42,6 +42,31 @@
 </nav>
 </header>
 <body>
-
+  <!--footer-->
+  <div class="container-fluid" style="background-color:#eaecf8; padding: 40px;">
+    <div class="row">
+      <div class="col-sm-4">
+        <h4>Contacto:</h4>
+        <p>Teléfonos: 22170821 - 22170811<br/>
+          Fax: 22170820<br/>
+          Cta. Cte: Banco BCI N° 85999997<br/>
+          RUT: 72.169.900-5<br/>
+          Email: fundacion@ninoycancer.cl<br/>
+        </p>
+      </div>
+      <div class="col-sm-4">
+        <h4>Redes Sociales</h4>
+        <p>Lorem ipsum dolor..</p>
+        <p>Ut enim ad..</p>
+      </div>
+      <div class="col-sm-4">
+        <h4>Ubicación:</4>
+          <div class="embed-responsive embed-responsive-4by3">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3331.502611695222!2d-70.53789128968806!3d-33.384049213371085!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1542149345194" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<!--footer-->
 </body>
 </html>
