--- a/noticias.html
+++ b/noticias.html
@@ -14,6 +14,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="js/bootstrap.min.js"></script>
+  <style>
+
+  </style>
 </head>
 <header>
   <nav class="navbar navbar-default navbar-fixed-top">
@@ -42,79 +45,105 @@
 </nav>
 </header>
 <body>
-<!--carrusel acá-->
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
+  <!--carrusel acá-->
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="images/carro1.jpeg" alt="Los Angeles">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="images/carro1.jpeg" alt="Los Angeles">
+      </div>
+
+      <div class="item">
+        <img src="images/carro1.jpeg" alt="Los Angeles">
+      </div>
+
+      <div class="item">
+        <img src="images/carro1.jpeg" alt="Los Angeles">
+      </div>
     </div>
 
-    <div class="item">
-      <img src="images/carro1.jpeg" alt="Los Angeles">
-    </div>
-
-    <div class="item">
-      <img src="images/carro1.jpeg" alt="Los Angeles">
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<!--Listado de noticias-->
-<div "container" style="background-color:lavenderblush;">
-<div class="media" style="margin-top:2%;">
-  <div class="media-left media-middle">
-    <a href="#">
-      <img class="media-object" src="images/not1.jpg" alt="...">
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
     </a>
   </div>
-  <div class="media-body">
-    <h4 class="media-heading">“Encuentro con la Montaña”</h4>
-    <p>Se efectuó recientemente entre el 10 y 13 de Septiembre. Fue un gran logro ya que en los últimos 2 años no se había podido efectuar por problemas de infraestructura.
-Este año fue realmente un éxito. Participaron niños desde Antofagasta a Punta Arenas. En total asistieron 65 personas. Esperamos que el próximo año participen también los pacientes de Arica.[...]</p>
-  </div>
-</div>
-<!--noticia2-->
-<div class="media">
-  <div class="media-left media-middle">
-    <a href="#">
-      <img class="media-object" src="images/not2.jpg" alt="...">
-    </a>
-  </div>
-  <div class="media-body">
-    <h4 class="media-heading">A volar con Sky</h4>
-    <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de Octubre fuimos a volar en su nuevo avión A320neoSky.
-En la foto: CEO de Sky Holger Paulmann y una paciente de oncología[...]</p>
-  </div>
-</div>
-<!--noticia3-->
-<div class="media">
-  <div class="media-left media-middle">
-    <a href="#">
-      <img class="media-object" src="images/not3.jpg" alt="...">
-    </a>
-  </div>
-  <div class="media-body">
-    <h4 class="media-heading">Taller de Ski</h4>
-    <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido realizar con un gran éxito el Taller de Ski, como parte del Programa Montaña de la alegría 2018. En esta oportunidad 3 niños Ecuatorianos[...]</p>
-  </div>
-</div>
-</div>
-</body>
-</html>
+  <!--Listado de noticias-->
+  <div class="container-fluid" style="background-color:#abe1fb; padding: 40px;">
+    <div class="media" style="background-color:lavenderblush;">
+      <div class="media-left media-middle">
+        <a href="#">
+          <img class="media-object" src="images/not1.jpg" alt="...">
+        </a>
+      </div>
+      <div class="media-body">
+        <h4 class="media-heading">“Encuentro con la Montaña”</h4>
+        <p>Se efectuó recientemente entre el 10 y 13 de Septiembre. Fue un gran logro ya que en los últimos 2 años no se había podido efectuar por problemas de infraestructura.
+          Este año fue realmente un éxito. Participaron niños desde Antofagasta a Punta Arenas. En total asistieron 65 personas. Esperamos que el próximo año participen también los pacientes de Arica.[...]</p>
+        </div>
+      </div>
+      <!--noticia2-->
+      <div class="media" style="background-color:#eaecf8;">
+        <div class="media-left media-middle">
+          <a href="#">
+            <img class="media-object" src="images/not2.jpg" alt="...">
+          </a>
+        </div>
+        <div class="media-body">
+          <h4 class="media-heading">A volar con Sky</h4>
+          <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de Octubre fuimos a volar en su nuevo avión A320neoSky.
+            En la foto: CEO de Sky Holger Paulmann y una paciente de oncología[...]</p>
+          </div>
+        </div>
+        <!--noticia3-->
+        <div class="media" style="background-color:lavenderblush;">
+          <div class="media-left media-middle">
+            <a href="#">
+              <img class="media-object" src="images/not3.jpg" alt="...">
+            </a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">Taller de Ski</h4>
+            <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido realizar con un gran éxito el Taller de Ski, como parte del Programa Montaña de la alegría 2018. En esta oportunidad 3 niños Ecuatorianos[...]</p>
+          </div>
+        </div>
+      </div>
+      <!--footer-->
+      <div class="container-fluid" style="background-color:#eaecf8; padding: 40px;">
+        <div class="row">
+          <div class="col-sm-4">
+            <h4>Contacto:</h4>
+            <p>Teléfonos: 22170821 - 22170811<br/>
+              Fax: 22170820<br/>
+              Cta. Cte: Banco BCI N° 85999997<br/>
+              RUT: 72.169.900-5<br/>
+              Email: fundacion@ninoycancer.cl<br/>
+            </p>
+          </div>
+          <div class="col-sm-4">
+            <h4>Redes Sociales</h4>
+            <p>Lorem ipsum dolor..</p>
+            <p>Ut enim ad..</p>
+          </div>
+          <div class="col-sm-4">
+            <h4>Ubicación:</4>
+              <div class="embed-responsive embed-responsive-4by3">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3331.502611695222!2d-70.53789128968806!3d-33.384049213371085!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1542149345194" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>            </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    <!--footer-->
+    </body>
+    </html>
